Added auth guard on front and tokens response from register

--- a/TaggyAppFrontend/src/app/components/home/home.component.html
+++ b/TaggyAppFrontend/src/app/components/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div class="flex flex-column justify-content-center align-content-center text-center h-screen">
+   <h1>Welcome to TaggyApp</h1>
+   <p>Sort and categorize your photos, videos and other files</p>
+   <div class="flex flex-column sm:flex-row justify-content-center align-items-center gap-3 sm:gap-5">
+      <a routerLink="/login" class="p-button font-bold home-link">Login</a>
+      <a routerLink="/register" class="p-button font-bold home-link">Register</a>
+   </div>
+</div>
