--- a/TaggyAppFrontend/src/app/components/index/index.component.html
+++ b/TaggyAppFrontend/src/app/components/index/index.component.html
@@ -2,7 +2,7 @@
    <h1>Welcome to TaggyApp</h1>
    <p>Sort and categorize your photos, videos and other files</p>
    <div class="flex flex-column sm:flex-row justify-content-center align-items-center gap-3 sm:gap-5">
-      <a routerLink="/login" class="p-button font-bold home-link">Login</a>
-      <a routerLink="/register" class="p-button font-bold home-link">Register</a>
+      <a routerLink="/login" class="p-button font-bold index-link">Login</a>
+      <a routerLink="/register" class="p-button font-bold index-link">Register</a>
    </div>
 </div>
