--- a/TaggyAppFrontend/src/styles.scss
+++ b/TaggyAppFrontend/src/styles.scss
@@ -2,6 +2,7 @@
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 @import 'primeflex/primeflex.scss';
+@import "primeicons/primeicons.css";
 
 html, body {
     margin: 0;
