--- a/TaggyAppFrontend/src/app/components/common/file-upload/file-upload.component.scss
+++ b/TaggyAppFrontend/src/app/components/common/file-upload/file-upload.component.scss
@@ -1,7 +1,7 @@
 :host ::ng-deep {
   .p-fileupload-content {
     flex: 0 1 auto;
-    overflow: scroll;
+    overflow-y: scroll;
     height: calc(100vh - 89px); 
 
     .p-progressbar {
