--- a/TaggyAppFrontend/src/styles.scss
+++ b/TaggyAppFrontend/src/styles.scss
@@ -8,4 +8,10 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
+    
+    min-width: 100vw;
+    max-width: 100vw;
+    min-height: 100vh;
+    max-height: 100vh;
+    overflow: hidden;
 }
