--- a/TaggyAppFrontend/src/app/components/common/file-upload/file-upload.component.html
+++ b/TaggyAppFrontend/src/app/components/common/file-upload/file-upload.component.html
@@ -12,8 +12,8 @@
                   [outlined]="true" severity="success" [disabled]="!files || files.length === 0" />
                <p-button (onClick)="clearEvent(clearCallback)" icon="pi pi-times" [rounded]="true" [outlined]="true"
                   severity="danger" [disabled]="!files || files.length === 0" />
-               <p-dropdown *ngIf="pagedGroups" [options]="pagedGroups.items" [(ngModel)]="selectedGroup" optionLabel="name"
-                  placeholder="Select Group" />
+               <p-dropdown *ngIf="pagedGroups" [options]="pagedGroups.items" [(ngModel)]="selectedGroup"
+                  optionLabel="name" placeholder="Select Group" />
             </div>
             <div class="flex flex-column justify-content-center align-items-end gap-2">
                <p-progressBar [value]="totalSizePercent" [showValue]="false"
@@ -28,16 +28,21 @@
          let-removeUploadedFileCallback="removeUploadedFileCallback">
          <div *ngIf="files.length > 0" class="flex flex-wrap justify-content-center gap-5">
             <div *ngFor="let file of files; let i = index"
-               class="file-card card flex flex-column sm:flex-row border-1 surface-border justify-content-between w-12 m-0 p-3 gap-3">
-               <div class="flex-1 flex flex-column w-12 sm:w-6 justify-content-center min-w-0">
+               class="file-card card flex m-0 flex-column sm:flex-row border-1 surface-border justify-content-between w-12 p-3 gap-3">
+               <div class="flex-1 flex flex-column w-12 sm:w-3 justify-content-center min-w-0">
                   <p class="m-0 font-semibold text-ellipsis">{{
-                     file.file.name }}</p>
+                     file.browserFile.name }}</p>
                   <p-badge *ngIf="file.status === 'failed'" [value]="file.status" severity="danger" />
                   <p-badge *ngIf="file.status === 'cancelled'" [value]="file.status" severity="warning" />
                </div>
-               <div class="flex flex-row justify-content-evenly align-items-center w-12 sm:w-6">
-                  <div class="w-6 text-center white-space-nowrap">{{ formatSize(file.file.size) }}</div>
-                  <div class="w-6 flex justify-content-center">
+               <div class="flex flex-row justify-content-evenly align-items-center w-12 sm:w-9">
+                  <div class="w-6">
+                     <span class="p-fluid">
+                        <p-autoComplete [(ngModel)]="file.createFileDto.tags" [suggestions]="tagSuggestions" (completeMethod)="onTagSuggestionComplete($event)" [multiple]="true" (onKeyUp)="onTagKeyUp($event, file)" field="name" />
+                     </span>
+                  </div>
+                  <div class="w-3 text-center white-space-nowrap">{{ formatSize(file.browserFile.size) }}</div>
+                  <div class="w-3 flex justify-content-center">
                      <div *ngIf="file.status === 'uploading'">
                         <div class="relative w-3rem">
                            <round-progress [current]="file.progress" [max]="100" [stroke]="8" [radius]="24"
@@ -68,12 +73,12 @@
                class="file-card card flex flex-column sm:flex-row border-1 surface-border justify-content-between w-12 m-0 p-3 gap-3">
                <div class="flex-1 flex flex-column w-12 sm:w-6 justify-content-center min-w-0">
                   <p class="m-0 font-semibold text-ellipsis">{{
-                     file.file.name }}</p>
+                     file.browserFile.name }}</p>
                   <p-badge *ngIf="file.status === 'failed'" [value]="file.status" severity="danger" />
                   <p-badge *ngIf="file.status === 'cancelled'" [value]="file.status" severity="warning" />
                </div>
                <div class="flex flex-row justify-content-evenly align-items-center w-12 sm:w-6">
-                  <div class="w-6 text-center white-space-nowrap">{{ formatSize(file.file.size) }}</div>
+                  <div class="w-6 text-center white-space-nowrap">{{ formatSize(file.browserFile.size) }}</div>
                   <div class="w-6 flex justify-content-center">
                      <div *ngIf="file.status === 'uploading'">
                         <div class="relative w-3rem">
