--- a/TaggyAppFrontend/src/app/components/dashboard/dashboard.component.html
+++ b/TaggyAppFrontend/src/app/components/dashboard/dashboard.component.html
@@ -1,31 +1,39 @@
 <div class="dashboard">
-   <div class="dashboard-content">
-      <div *ngIf="pagedFiles" class="flex flex-column gap-4 p-4">
-         <div *ngFor="let file of pagedFiles.items" class="p-card flex justify-content-between p-2"
-            (click)="onFileClick(file)">
-            <h5 class="card-title">{{ file.name }}</h5>
-            <p class="card-text">{{ file.description }}</p>
-            <a href="{{ file.url }}" class="p-button p-1">Download</a>
-         </div>
-      </div>
-      <div *ngIf="pagedGroups">
-         <div *ngFor="let group of pagedGroups.items">
-            <div class="card">
-               <div class="card-body">
-                  <h5 class="card-title">{{ group.name }}</h5>
-                  <p class="card-text">{{ group.description }}</p>
+   <div *ngIf="pagedFiles" class="dashboard-content">
+      <p-dataView  #dv [value]="pagedFiles.items" [rows]="rows" class="flex-1">
+         <ng-template pTemplate="header">
+            <div class="flex flex-column md:flex-row md:justify-content-between">
+               <p-dropdown [options]="sortOptions" (onChange)="onSortChange($event)" placeholder="Sort By Name"
+                  styleClass="mb-2 md:mb-0" />
+            </div>
+         </ng-template>
+         <ng-template pTemplate="list" let-files>
+            <div *ngFor="let file of pagedFiles.items" class="flex flex-column md:flex-row align-items-center p-2 gap-2"
+               (click)="onFileClick(file)">
+               <div class="w-12 md:w-3">
+                  <h5 class="card-title text-ellipsis">{{ file.name }}</h5>
+               </div>
+               <div class="w-12 md:w-9 flex align-items-center gap-3">
+                  <div class="flex flex-grow-0 flex-shrink-0 gap-2 w-6 overflow-x-auto overflow-y-hidden">
+                     <p-badge *ngFor="let tag of file.tags" [value]="tag.name"></p-badge>
+                  </div>
+                  <p class="w-3">{{ file.size | fileSize }}</p>
+                  <p class="w-3">{{ file.createdAt | date: 'short' }}</p>
                </div>
             </div>
-         </div>
-      </div>
+         </ng-template>
+      </p-dataView>
+      <p-paginator [rows]="rows" [rowsPerPageOptions]="[10, 20, 30]" [totalRecords]="pagedFiles.totalItems"
+         (onPageChange)="onPageChange($event)" />
    </div>
-   <p-button label="Add" icon="pi pi-plus" class="dashboard-button bg-white" [outlined]="true"
-      (onClick)="sidebarVisible = !sidebarVisible" />
+   <p-button label="Add" icon="pi pi-plus" class="dashboard-button" styleClass="bg-white" [rounded]="true"
+      [outlined]="true" [raised]="true" (onClick)="sidebarVisible = !sidebarVisible" />
    <p-sidebar class="relative" [(visible)]="sidebarVisible" [fullScreen]="true" [position]="'bottom'"
       [transitionOptions]="'200ms'">
       <ng-template pTemplate="headless">
-         <file-upload (onFileUploaded)="onFilesUploaded()"></file-upload>
-         <p-button icon="pi pi-times" class="absolute top-0 left-50" (onClick)="sidebarVisible = false"></p-button>
+         <file-upload (onFilesUploaded)="onFilesUploaded()"></file-upload>
+         <p-button icon="pi pi-angle-double-down" class="upload-button" [outlined]="true"
+            (onClick)="sidebarVisible = false"></p-button>
       </ng-template>
    </p-sidebar>
    <p-dialog header="File Viewer" [(visible)]="dialogVisible" [modal]="true" [closable]="true" [dismissableMask]="true"
@@ -33,38 +41,39 @@
       <ng-template pTemplate="headless">
          <div class="file-dialog-content">
             <div class="file-dialog-header">
-               <p-button icon="pi pi-times" styleClass="p-0 w-2rem h-2rem" [text]="true" [rounded]="true"
+               <p-button icon="pi pi-times" styleClass="p-0" [text]="true" [rounded]="true"
                   (onClick)="dialogVisible = false"></p-button>
-               <p-button *ngIf="supportedFileTypes.includes(clickedFile.contentType.split('/')[0])"
+               <p-button *ngIf="supportedFileTypes.includes(selectedFile.contentType.split('/')[0])"
                   icon="pi pi-download" styleClass="p-0 relative" [text]="true" [rounded]="true">
-                  <a class="absolute w-2rem h-2rem" [href]="clickedFile.url"></a>
+                  <a class="absolute w-2rem h-2rem" [href]="selectedFile.url"></a>
                </p-button>
-               <h3 *ngIf="clickedFile.name" class="m-0 px-2">{{ clickedFile.name }}</h3>
+               <h3 *ngIf="selectedFile.name" class="m-0 px-2 text-ellipsis">{{ selectedFile.name }}</h3>
             </div>
             <!-- For images -->
-            <ng-container *ngIf="clickedFile.contentType.startsWith('image/')">
-               <img [src]="clickedFile.url" [alt]="clickedFile.name">
+            <ng-container *ngIf="selectedFile.contentType.startsWith('image/')">
+               <img [src]="selectedFile.url" [alt]="selectedFile.name">
             </ng-container>
 
             <!-- For videos -->
-            <ng-container *ngIf="clickedFile.contentType.startsWith('video/')">
-               <video [src]="clickedFile.url" controls>
+            <ng-container *ngIf="selectedFile.contentType.startsWith('video/')">
+               <video [src]="selectedFile.url" controls>
                   Your browser does not support the video tag.
                </video>
             </ng-container>
 
             <!-- audio -->
-            <ng-container *ngIf="clickedFile.contentType.startsWith('audio/')">
-               <audio [src]="clickedFile.url" controls>
+            <ng-container *ngIf="selectedFile.contentType.startsWith('audio/')">
+               <audio [src]="selectedFile.url" controls>
                   Your browser does not support the audio tag.
                </audio>
             </ng-container>
+
          </div>
 
          <!-- For other types -->
-         <ng-container *ngIf="!supportedFileTypes.includes(clickedFile.contentType.split('/')[0])">
+         <ng-container *ngIf="!supportedFileTypes.includes(selectedFile.contentType.split('/')[0])">
             <div class="flex justify-content-center">
-               <a [href]="clickedFile.url" download="file" class="p-button p-4">
+               <a [href]="selectedFile.url" download="file" class="p-button p-4">
                   <i class="pi pi-download"></i>
                </a>
             </div>
