--- a/TaggyAppFrontend/src/app/components/dashboard/dashboard.component.html
+++ b/TaggyAppFrontend/src/app/components/dashboard/dashboard.component.html
@@ -1,15 +1,35 @@
 <div class="dashboard">
    <div *ngIf="pagedFiles" class="dashboard-content">
-      <p-dataView  #dv [value]="pagedFiles.items" [rows]="rows" class="flex-1">
+      <p-dataView #dv [value]="pagedFiles.items" [rows]="fileRows" class="flex-1">
          <ng-template pTemplate="header">
-            <div class="flex flex-column md:flex-row md:justify-content-between">
-               <p-dropdown [options]="sortOptions" (onChange)="onSortChange($event)" placeholder="Sort By Name"
-                  styleClass="mb-2 md:mb-0" />
+            <div class="flex">
+               <div class="flex flex-column md:flex-row w-12 lg:w-10 xl:w-8 gap-2">
+                  <div class="w-12 md:w-4 flex">
+                     <p-dropdown class="w-8" [options]="sortOptions" [showClear]="true" [checkmark]="true"
+                        (onChange)="onSortChange($event)" [style]="{'width':'100%'}" placeholder="Sort"
+                        styleClass="mb-2 md:mb-0" />
+                     <p-dropdown class="w-4" [options]="sortOperatorOptions" [style]="{'width':'100%'}"
+                        (onChange)="onSortOperatorChange($event)">
+                     </p-dropdown>
+                  </div>
+                  <div class="w-12 md:w-4">
+                     <group-select [(group)]="selectedGroup" />
+                  </div>
+                  <div *ngIf="selectedGroup" class="w-12 md:w-4 flex">
+                     <p-multiSelect class="w-8" [options]="selectedGroup.tags" [(ngModel)]="selectedTags"
+                        [showClear]="true" (onChange)="onTagsChange()" (onClear)="onTagsChange()" [style]="{'width':'100%'}"
+                        display="chip" optionLabel="name" optionValue="name" placeholder="Tags">
+                     </p-multiSelect>
+                     <p-dropdown class="w-4" [options]="tagOperatorOptions" [style]="{'width':'100%'}"
+                        (onChange)="onTagOperatorChange($event)">
+                     </p-dropdown>
+                  </div>
+               </div>
             </div>
          </ng-template>
          <ng-template pTemplate="list" let-files>
             <div *ngFor="let file of pagedFiles.items" class="flex flex-column md:flex-row align-items-center p-2 gap-2"
-               (click)="onFileClick(file)">
+               (click)="onFileSelected(file)">
                <div class="w-12 md:w-3">
                   <h5 class="card-title text-ellipsis">{{ file.name }}</h5>
                </div>
@@ -23,7 +43,7 @@
             </div>
          </ng-template>
       </p-dataView>
-      <p-paginator [rows]="rows" [rowsPerPageOptions]="[10, 20, 30]" [totalRecords]="pagedFiles.totalItems"
+      <p-paginator [rows]="fileRows" [rowsPerPageOptions]="[10, 20, 30]" [totalRecords]="pagedFiles.totalItems"
          (onPageChange)="onPageChange($event)" />
    </div>
    <p-button label="Add" icon="pi pi-plus" class="dashboard-button" styleClass="bg-white" [rounded]="true"
@@ -49,6 +69,7 @@
                </p-button>
                <h3 *ngIf="selectedFile.name" class="m-0 px-2 text-ellipsis">{{ selectedFile.name }}</h3>
             </div>
+
             <!-- For images -->
             <ng-container *ngIf="selectedFile.contentType.startsWith('image/')">
                <img [src]="selectedFile.url" [alt]="selectedFile.name">
@@ -78,6 +99,7 @@
                </a>
             </div>
          </ng-container>
+
       </ng-template>
    </p-dialog>
 </div>
